Outliner visibility icons drag behaviour broken #62016

Closed
opened 2019-02-27 16:48:36 +01:00 by mantissa · 5 comments

System Information
Operating system: Xubuntu 18.04
Graphics card: Nvidia Titan X (Pascal)

Blender Version
Broken: 918941483f, 2019-02-27
Worked: about 2-3 weeks prior

Short description of error
Dragging horizontally over multiple outliner visibility icons causes them to glitch out.

Exact steps for others to reproduce the error

  • Go to Outliner
  • Click & drag mouse horizontally over visibility icons of any type
**System Information** Operating system: Xubuntu 18.04 Graphics card: Nvidia Titan X (Pascal) **Blender Version** Broken: 918941483f7e, 2019-02-27 Worked: about 2-3 weeks prior **Short description of error** Dragging horizontally over multiple outliner visibility icons causes them to glitch out. **Exact steps for others to reproduce the error** - Go to Outliner - Click & drag mouse horizontally over visibility icons of any type
Author

Added subscriber: @Mantissa

Added subscriber: @Mantissa
Dalai Felinto was assigned by Sebastian Parborg 2019-02-27 16:56:29 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht, another one introduced on 2778ecb58c.

I looked at this, and I think the only way to handle this is to add a callback to the button that returns the button pushed state, to be called from ui_drag_toggle_but_pushed_state().
Because we are mixing bool buttons and callback buttons in the outliner, and there is no way they will return the same pushed state.

That said I wonder if it is worthy pursuing this if we are to get rid of the fancy 3-in-1 visibility buttons in the outliner.

@brecht, another one introduced on 2778ecb58c. I looked at this, and I think the only way to handle this is to add a callback to the button that returns the button pushed state, to be called from `ui_drag_toggle_but_pushed_state()`. Because we are mixing bool buttons and callback buttons in the outliner, and there is no way they will return the same pushed state. That said I wonder if it is worthy pursuing this if we are to get rid of the fancy 3-in-1 visibility buttons in the outliner.

This issue was referenced by 92182495da

This issue was referenced by 92182495da881d54310bc6dd53afb91daf00116f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62016
No description provided.